added unique name for obj

--- a/booking.html
+++ b/booking.html
@@ -254,8 +254,8 @@
                     <label for="groupSize">Tour Group Size:</label>
                         <input 
                         type="number"
-                        id="inputage"
-                        name="age"
+                        id="inputSize"
+                        name="Size"
                         placeholder="Enter Tour Size (1-15)"
                         min="1"
                         max="15"
